# PowerFL-AnonGBDT

./: Dockerfile  LICENSE.txt  README.md  citation.txt
artifact/: .bazelrc  BUILD.bazel  WORKSPACE  install.sh  setup.py
artifact/bazel/: libdivide.BUILD  local_openmp_macos.BUILD  repositories.bzl
artifact/data/dataset/: a9a_test_0.csv  a9a_test_1.csv  a9a_test_2.csv  a9a_test_3.csv  a9a_test_4.csv  breast_cancer_Alice_train_0.csv  breast_cancer_Alice_train_1.csv  breast_cancer_Alice_train_2.csv  breast_cancer_Alice_train_3.csv  breast_cancer_Alice_train_4.csv  breast_cancer_Bob_train_0.csv  breast_cancer_Bob_train_1.csv  breast_cancer_Bob_train_2.csv  breast_cancer_Bob_train_3.csv  breast_cancer_Bob_train_4.csv  breast_cancer_test_0.csv  breast_cancer_test_1.csv  breast_cancer_test_2.csv  breast_cancer_test_3.csv  breast_cancer_test_4.csv  cod_rna_Alice_train_0.csv  cod_rna_Alice_train_1.csv  cod_rna_Alice_train_2.csv  cod_rna_Alice_train_3.csv  cod_rna_Alice_train_4.csv  cod_rna_Bob_train_0.csv  cod_rna_Bob_train_1.csv  cod_rna_Bob_train_2.csv  cod_rna_Bob_train_3.csv  cod_rna_Bob_train_4.csv  cod_rna_test_0.csv  cod_rna_test_1.csv  cod_rna_test_2.csv  cod_rna_test_3.csv  cod_rna_test_4.csv  phishing_Alice_train_0.csv  phishing_Alice_train_1.csv  phishing_Alice_train_2.csv  phishing_Alice_train_3.csv  phishing_Alice_train_4.csv  (+25 more)
artifact/experimental/squirrel/: objectives_test.cc  squirrel_demo_main.cc
artifact/libspu/kernel/hal/: fxp_approx.cc
artifact/libspu/mpc/cheetah/: arithmetic.cc  arithmetic.h  boolean.cc  boolean.h  protocol.cc  state.cc  state.h
artifact/libspu/mpc/cheetah/arith/: cheetah_mul.cc
artifact/libspu/mpc/cheetah/cpsi/: BUILD.bazel  anon_xgb.cc  anon_xgb.h  anon_xgb_s.cc  anongbdt_inference.cc  anongbdt_main.cc  basegbdt_main.cc  benchmark.cc  cuckoo_hash.cc  cuckoo_hash.h  histogram.cc  histogram.h  main_io.h  operators.cc  operators.h  paxos_okvs.cc  paxos_okvs.h  vole_cpsi.cc  vole_cpsi.h
artifact/libspu/mpc/cheetah/nonlinear/: BUILD.bazel  compare_sigmoid_prot.cc  compare_sigmoid_prot.h  compare_sigmoid_prot_test.cc
artifact/libspu/mpc/cheetah/okvs/: BUILD.bazel  aes_crhash.cc  aes_crhash.h  aes_crhash_test.cc  baxos.cc  baxos.h  baxos_test.cc  dense_mtx.cc  dense_mtx.h  galois.cc  galois.h  galois128.cc  galois128.h  galois128_test.cc  galois_test.cc  paxos.cc  paxos.h  paxos_hash.cc  paxos_hash.h  paxos_hash_test.cc  paxos_test.cc  paxos_utils.cc  paxos_utils.h  simple_index.cc  simple_index.h
artifact/libspu/mpc/cheetah/rlwe/: BUILD.bazel  fast_pack.cc  fast_pack.h  fast_pack_test.cc
artifact/spu/: BUILD.bazel  libpsi.cc
artifact/spu/anon_xgb/: cpsi.py  cuckoo_hash.py  dataset_utils.py  jax_demo.py  mpc_anon_xgboost.py  mpc_logistic.py  mpc_xgboost.py
artifact/spu/tests/: cpsi_test.py  percept_pir.py  ppir_test.py  ray_test.py
claims/claim1/: claim.md  expected.md  run_p0.sh  run_p1.sh
claims/claim2/: claim.md  expected.md  run.sh
claims/claim3/: claim.md  expected.md  run.sh
claims/claim4/: acc_evaluation.py  claim.md  expected.md  run_a9a_p0.sh  run_a9a_p1.sh  run_breast_cancer_p0.sh  run_breast_cancer_p1.sh  run_cod_rna_p0.sh  run_cod_rna_p1.sh  run_covtype_p0.sh  run_covtype_p1.sh  run_phishing_p0.sh  run_phishing_p1.sh  run_skin_nonskin_p0.sh  run_skin_nonskin_p1.sh
claims/claim5/: claim.md  expected.md  run.sh
